--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
       </div>
     </div>
 
+        <div class="p-6  max-w-sm box-content mx-auto bg-slate-900 rounded-xl shadow-lg flex items-center space-x-4">
+      <div class="shrink-0">
+        <img class="h-12 w-12" src="images/pheonix_logo.png" alt="">
+      </div>
+      <div class="">
+        <div class="text-xl font-medium bg-slate-100 text-black rounded-md p-3 ">Title</div>
+        <br>
+        <p class="text-slate-900 bg-slate-300 rounded-md p-3 font-medium">You have a new message! o;oeom lrmgmer  jo erggorgujoierggogegoirgooehrgowirh ggo[er rogi h eohogowr hgoergoerp geohgoier gogherofl wejffojeo  rn  roerjfoerov eorinierh9-he rvon elpfvopn moi fh ere ierv jeivh  ioevoiev boopi eoie ge rehg eriufgh 9er gpioe g erg ipruf iupfvioueruere voerviuer ef erg hiupeerg rgh ue verfh ipefgpe fjioghoi roe ioer ioer o o ge rgfieor er  egoiief fgjeof </p>
+      </div>
+    </div>
+    
+        <div class="p-6  max-w-sm box-content mx-auto bg-slate-900 rounded-xl shadow-lg flex items-center space-x-4">
+      <div class="shrink-0">
+        <img class="h-12 w-12" src="images/pheonix_logo.png" alt="">
+      </div>
+      <div class="">
+        <div class="text-xl font-medium bg-slate-100 text-black rounded-md p-3 ">Title</div>
+        <br>
+        <p class="text-slate-900 bg-slate-300 rounded-md p-3 font-medium">You have a new message! o;oeom lrmgmer  jo erggorgujoierggogegoirgooehrgowirh ggo[er rogi h eohogowr hgoergoerp geohgoier gogherofl wejffojeo  rn  roerjfoerov eorinierh9-he rvon elpfvopn moi fh ere ierv jeivh  ioevoiev boopi eoie ge rehg eriufgh 9er gpioe g erg ipruf iupfvioueruere voerviuer ef erg hiupeerg rgh ue verfh ipefgpe fjioghoi roe ioer ioer o o ge rgfieor er  egoiief fgjeof </p>
+      </div>
+    </div>
     
   </body>
 </html>
